Fixed issue where geocoder datalist contents covered text input in Safari on iOS, Mac, and Windows.

--- a/src/plugins/geomap/_base.scss
+++ b/src/plugins/geomap/_base.scss
@@ -292,9 +292,9 @@
 }
 
 .geomap-geoloc {
-	left: 60px;
+	left: 70px;
 	position: absolute;
-	right: 60px;
+	right: 70px;
 	top: 15px;
 	z-index: 10000;
 
